Removed popper to fix console error

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
       href="https://unpkg.com/bootstrap/dist/css/bootstrap.css"
     />
     <script src="https://unpkg.com/jquery"></script>
-    <script src="https://unpkg.com/popper"></script>
+    <!-- <script src="https://unpkg.com/popper"></script> -->
     <script src="https://unpkg.com/bootstrap"></script>
 
     <link
